--- a/app/views/welcome/about.html.erb
+++ b/app/views/welcome/about.html.erb
@@ -1,2 +1,2 @@
 <h1>Welcome#about</h1>
-<p>Find me in (anywheregit status)app/views/welcome/about.html.erb</p>
+<p>Find me in (anywhere status)app/views/welcome/about.html.erb</p>
