Still with error

--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -34,7 +34,7 @@
 
 <br>
 
-<h3> Import companies </h3>
+<h3> Import Companies </h3>
 <%= form_tag import_companies_path, mutlipart: true do %>
     <%= file_field_tag :file %>
     <%= submit_tag "Upload Companies" %>
