--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -35,7 +35,11 @@
 <br>
 
 <h3> Import Companies </h3>
-<%= form_tag import_companies_path, mutlipart: true do %>
+<!--<%= form_tag import_companies_path, :multipart => true do %>
+    <%= file_field_tag :file %>
+    <%= submit_tag "Upload Companies" %>
+<% end %>-->
+<%= form_tag import_companies_path, multipart: true do %>
     <%= file_field_tag :file %>
     <%= submit_tag "Upload Companies" %>
 <% end %>
