--- a/app/views/invoices/_form.html.erb
+++ b/app/views/invoices/_form.html.erb
@@ -12,35 +12,48 @@
           </div>
       <% end %>
 
-      <div class="field form-group">
-        <%= f.label :date, class: 'col-sm-2 control-label' %><br>
+      <div class="form-group">
+        <%= f.label :date, class: 'col-sm-2 control-label' %>
 
         <div class="col-sm-10">
           <%= f.date_select :date %>
         </div>
       </div>
-      <div class="field form-group">
-        <%= f.label :company, class: 'col-sm-2 control-label' %><br>
+      <div class="form-group">
+        <%= f.label :company, class: 'col-sm-2 control-label' %>
 
         <div class="col-sm-10">
           <%= f.text_field :company %>
         </div>
       </div>
-      <div class="field form-group">
-        <%= f.label :tax, class: 'col-sm-2 control-label' %><br>
+      <div class="form-group">
+        <%= f.label :tax, class: 'col-sm-2 control-label' %>
 
         <div class="col-sm-10">
           <%= f.text_field :tax %>
         </div>
       </div>
-      <div class="field form-group">
-        <%= f.label :saleperson, class: 'col-sm-2 control-label' %><br>
+
+
+
+      <div class="form-group">
+        <%= f.label :saleperson, class: 'col-sm-2 control-label' %>
 
         <div class="col-sm-10">
           <%= f.text_field :saleperson %>
         </div>
       </div>
-      <div class="actions form-group">
+
+      <div class="form-group">
+        <%= f.label "Status", class: 'col-sm-2 control-label' %>
+
+        <div class="col-sm-10">
+          <%= f.select(:status_type, options_for_select([['Paid', 'Paid'], ['Pending', 'Pending']]), {include_blank: true}) %>
+        </div>
+
+      </div>
+
+      <div class="form-group">
         <div class="col-sm-2"></div>
         <div class="col-sm-10">
 
