Admin dropdown elements

--- a/app/views/invoices/show.html.erb
+++ b/app/views/invoices/show.html.erb
@@ -16,8 +16,8 @@
 </p>
 
 <p>
-  <strong>EmployeeID:</strong>
-  <%= @invoice.employee_id %>
+  <strong>Employee:</strong>
+  <%= @invoice.employee.name %>
 </p>
 
 <p>
