--- a/app/views/invoices/index.html.erb
+++ b/app/views/invoices/index.html.erb
@@ -31,7 +31,11 @@
             <td><%= invoice.date.strftime("%Y-%m-%d") %></td>
             <td><%= invoice.company %></td>
             <td><%= invoice.tax %></td>
-            <td><%= invoice.employee_id %></td>
+            <% if invoice.employee_id.nil? %>
+                <td></td>
+            <% else %>
+                <td><%= invoice.employee.name %></td>
+            <% end %>
             <td><%= invoice.status_type %></td>
             <td><%= link_to 'Show', invoice, class: 'btn btn-mini btn-default' %></td>
             <td><%= link_to 'Edit', edit_invoice_path(invoice), class: 'btn btn-mini btn-success' %></td>
